--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@types/node": "^16.3.1",
     "@vue/component-compiler-utils": "^3.1.2",
     "axios": "^0.19.2",
     "faker": "^4.1.0",
